# websearchtool

./: .gitignore  gsearch.py  main.py  pyproject.toml
src/config/: settings.py
src/core/: exceptions.py  interfaces.py
src/llm/: github_llm.py
src/models/: context_models.py
src/search/: __init__.py  cache.py  client.py  formatter.py
src/services/: serp_ranker.py
src/utils/: logging.py
