[project]
name = "websearchtool"
version = "0.1.0"
description = "Web Search Agent for AI Integration"
authors = [{ name = "CLoaKY", email = "laysheth1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.12",
    "azure-ai-inference>=1.0.0b9",
    "bs4>=0.0.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "scrapy>=2.13.2",
    "typer>=0.16.0",
]
